Utils/vpc.yml
---
"AWSTemplateFormatVersion": "2010-09-09"


Parameters:
  ModuleNumber:
    Type: String

Resources:
  AllenVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "10.0.0.0/16"
      Tags:
        - Key: user
          Value: allen.fisher
        - Key: "stelligent-u-lesson"
          Value: !Ref ModuleNumber

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.43.0/24
      VpcId: !Ref AllenVPC
      AvailabilityZone: us-west-1a
      Tags:
        - Key: user
          Value: allen.fisher
        - Key: "stelligent-u-lesson"
          Value: !Ref ModuleNumber
    
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.44.0/24
      VpcId: !Ref AllenVPC
      AvailabilityZone: us-west-1b
      Tags:
        - Key: user
          Value: allen.fisher
        - Key: "stelligent-u-lesson"
          Value: !Ref ModuleNumber

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.45.0/24
      VpcId: !Ref AllenVPC
      AvailabilityZone: us-west-1a
      Tags:
        - Key: user
          Value: allen.fisher
        - Key: "stelligent-u-lesson"
          Value: !Ref ModuleNumber

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.46.0/24
      VpcId: !Ref AllenVPC
      AvailabilityZone: us-west-1b
      Tags:
        - Key: user
          Value: allen.fisher
        - Key: "stelligent-u-lesson"
          Value: !Ref ModuleNumber
  AllenIG:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: user
          Value: allen.fisher
        - Key: "stelligent-u-lesson"
          Value: !Ref ModuleNumber

  IgAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref AllenIG
      VpcId: !Ref AllenVPC

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: user
          Value: allen.fisher
        - Key: "stelligent-u-lesson"
          Value: !Ref ModuleNumber
      VpcId: !Ref AllenVPC

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: user
          Value: allen.fisher
        - Key: "stelligent-u-lesson"
          Value: !Ref ModuleNumber
      VpcId: !Ref AllenVPC

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: user
          Value: allen.fisher
        - Key: "stelligent-u-lesson"
          Value: !Ref ModuleNumber
      VpcId: !Ref AllenVPC

  AllenRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref AllenIG

  NatRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref AllenNatGateway1
  
  NatRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref AllenNatGateway2

  PublicRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1
  
  PublicRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  NatRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1
    
  NatRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2

  NatEIP1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  
  NatEIP2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  AllenNatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatEIP1.AllocationId
      SubnetId: !Ref PublicSubnet1
  
  AllenNatGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatEIP2.AllocationId
      SubnetId: !Ref PublicSubnet2

  # PublicNacl:
  #   Type: AWS::EC2::NetworkAcl
  #   Properties:
  #     Tags:
  #       - Key: user
  #         Value: allen.fisher
  #       - Key: "stelligent-u-lesson"
  #         Value: !Ref ModuleNumber
  #     VpcId: !Ref AllenVPC

  # PublicNaclEntry:
  #   Type: AWS::EC2::NetworkAclEntry
  #   Properties:
  #     CidrBlock: 47.158.220.84/32
  #     Egress: false
  #     NetworkAclId: !GetAtt PublicNacl.Id
  #     PortRange:
  #       From: 22
  #       To: 22
  #     Protocol: 6
  #     RuleAction: allow
  #     RuleNumber: 200

  # PrivateNacl:
  #   Type: AWS::EC2::NetworkAcl
  #   Properties:
  #     Tags:
  #       - Key: user
  #         Value: allen.fisher
  #       - Key: "stelligent-u-lesson"
  #         Value: !Ref ModuleNumber
  #     VpcId: !Ref AllenVPC

  # PrivateNaclEntrySsh:
  #   Type: AWS::EC2::NetworkAclEntry
  #   Properties:
  #     CidrBlock: 10.0.43.0/24
  #     Egress: false
  #     NetworkAclId: !GetAtt PrivateNacl.Id
  #     PortRange:
  #       From: 22
  #       To: 22
  #     Protocol: 6
  #     RuleAction: allow
  #     RuleNumber: 200

  # PrivateNaclEntryPing:
  #   Type: AWS::EC2::NetworkAclEntry
  #   Properties:
  #     CidrBlock: 10.0.43.0/24
  #     Egress: false
  #     NetworkAclId: !GetAtt PrivateNacl.Id
  #     PortRange:
  #       From: 8
  #       To: 0
  #     Protocol: 1
  #     Icmp:
  #       Code: -1
  #       Type: 8
  #     RuleAction: allow
  #     RuleNumber: 201

  # PrivateNaclEntryHttp:
  #   Type: AWS::EC2::NetworkAclEntry
  #   Properties:
  #     CidrBlock: 10.0.43.0/24
  #     Egress: false
  #     NetworkAclId: !GetAtt PrivateNacl.Id
  #     PortRange:
  #       From: 80
  #       To: 80
  #     Protocol: 6
  #     RuleAction: allow
  #     RuleNumber: 202

  # PrivateNaclEntryEgress:
  #   Type: AWS::EC2::NetworkAclEntry
  #   Properties:
  #     CidrBlock: 10.0.43.0/24
  #     Egress: true
  #     NetworkAclId: !GetAtt PrivateNacl.Id
  #     PortRange:
  #       From: -1
  #       To: -1
  #     Protocol: -1
  #     RuleAction: allow
  #     RuleNumber: 203
  
  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub "Allen F Module ${ModuleNumber} SG"
      VpcId: !Ref AllenVPC
      SecurityGroupIngress:
        - IpProtocol: icmp
          FromPort: 8
          ToPort: 0
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

Outputs:
  VPCId:
    Value: !Ref AllenVPC
    Export:
      Name: !Sub "AllenModule${ModuleNumber}VPCId"
  PublicSubnetId1:
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub "AllenModule${ModuleNumber}PublicSubnetId1"
  PublicSubnetId2:
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub "AllenModule${ModuleNumber}PublicSubnetId2"
  PrivateSubnetId1:
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub "AllenModule${ModuleNumber}PrivateSubnetId1"
  PrivateSubnetId2:
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub "AllenModule${ModuleNumber}PrivateSubnetId2"
  SecurityGroupId:
    # Description: !Sub "Security Group for Allen Module ${ModuleNumber}"
    Value: !Ref MySecurityGroup
    Export:
      Name: !Sub "AllenModule${ModuleNumber}SecurityGroup"
