Utils/vpc2AZ.yml
---
AWSTemplateFormatVersion: "2010-09-09"

Parameters:
  ModuleNumber:
    Type: String

Resources:
      AllenVPC:
        Type: AWS::EC2::VPC
        Properties:
          CidrBlock: 10.0.0.0/16

      PublicSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
          VpcId: !Ref AllenVPC
          AvailabilityZone: us-west-1a
          CidrBlock: 10.0.1.0/24
     
      PublicSubnet2:
        Type: AWS::EC2::Subnet
        Properties:
          VpcId: !Ref AllenVPC
          AvailabilityZone: us-west-1c
          CidrBlock: 10.0.2.0/24
     
      PrivateSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
          VpcId: !Ref AllenVPC
          AvailabilityZone: us-west-1a
          CidrBlock: 10.0.3.0/24
     
      PrivateSubnet2:
        Type: AWS::EC2::Subnet
        Properties:
          VpcId: !Ref AllenVPC
          AvailabilityZone: us-west-1c
          CidrBlock: 10.0.4.0/24
     
      InternetGateway:
        Type: AWS::EC2::InternetGateway
      
      GatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
          VpcId: !Ref AllenVPC
          InternetGatewayId: !Ref InternetGateway
      
      PublicRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
          VpcId: !Ref AllenVPC
      
      PublicRoute:
        Type: AWS::EC2::Route
        DependsOn: GatewayAttachment
        Properties:
          RouteTableId: !Ref PublicRouteTable
          DestinationCidrBlock: 0.0.0.0/0
          GatewayId: !Ref InternetGateway
     
      PublicSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
          SubnetId: !Ref PublicSubnet1
          RouteTableId: !Ref PublicRouteTable
     
      PublicSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
          SubnetId: !Ref PublicSubnet2
          RouteTableId: !Ref PublicRouteTable
     
      NatGateway:
        Type: AWS::EC2::NatGateway
        Properties: 
          SubnetId: !Ref PublicSubnet1
          AllocationId: !GetAtt NatPublicIP.AllocationId

      NatPublicIP:
        Type: AWS::EC2::EIP
        DependsOn: AllenVPC
        Properties:
          Domain: vpc
     
      PrivateRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
          VpcId: !Ref AllenVPC
      
      PrivateRoute:
        Type: AWS::EC2::Route
        Properties:
          NatGatewayId: !Ref NatGateway
          RouteTableId: !Ref PrivateRouteTable
          DestinationCidrBlock: 0.0.0.0/0
     
      PrivateSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
          SubnetId: !Ref PrivateSubnet1
          RouteTableId: !Ref PrivateRouteTable
     
      PrivateSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
          SubnetId: !Ref PrivateSubnet2
          RouteTableId: !Ref PrivateRouteTable
      MySecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
          GroupDescription: !Sub "Allen F Module ${ModuleNumber} SG"
          VpcId: !Ref AllenVPC
          SecurityGroupIngress:
            - IpProtocol: icmp
              FromPort: 8
              ToPort: 0
              CidrIp: 0.0.0.0/0
            - IpProtocol: tcp
              FromPort: 22
              ToPort: 22
              CidrIp: 0.0.0.0/0

Outputs:
  VPCId:
    Value: !Ref AllenVPC
    Export:
      Name: !Sub "AllenModule${ModuleNumber}VPCId"
  NatEIP:
    Value: !Ref NatPublicIP
    Export:
      Name: !Sub "AllenModule${ModuleNumber}NatPublicIP"
  PublicSubnetId1:
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub "AllenModule${ModuleNumber}PublicSubnetId1"
  PublicSubnetId2:
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub "AllenModule${ModuleNumber}PublicSubnetId2"
  PrivateSubnetId1:
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub "AllenModule${ModuleNumber}PrivateSubnetId1"
  PrivateSubnetId2:
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub "AllenModule${ModuleNumber}PrivateSubnetId2"
  SecurityGroupId:
    Value: !Ref MySecurityGroup
    Export:
      Name: !Sub "AllenModule${ModuleNumber}SecurityGroup"
